Quorum3/Library/Tests/TypeChecker/Pass/TextSpecialDC.quorum
class Main
    action Main
        text p = ""
        Text t 
        t:SetValue(p)
        
        text str = p:GetDoubleQuote()
        output str
        str = t:GetDoubleQuote()
        output str
    end
end